# Maximal-Rectangle

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark.cpp
demos/: main.cpp
docs/: actividad3-CC232.md
include/: maximal_rectangle.h
src/: maximal_rectangle.cpp
tests/: test.cpp
